// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Component: stories > Ant stories > Story Tagged 1`] = `
"<div contenteditable="true">
  <span>We preset five different colors. You can set color property such as </span>
  <span contenteditable="false">success</span>
  <span>, </span>
  <span contenteditable="false">processing</span>
  <span>, </span>
  <span contenteditable="false">error</span>
  <span>, </span>
  <span contenteditable="false">default</span>
  <span> and </span>
  <span contenteditable="false">warning</span>
  <span> to show specific status.</span>
</div>"
`;

exports[`Component: stories > Api stories > Story Block 1`] = `
"<div>
  <div contenteditable="true">
    <div>
      <div contenteditable="false">
        <button type="button" draggable="false" aria-label="Block options">
          <span></span>
        </button>
      </div>
      <mark contenteditable="false">a</mark>
    </div>
    <div>
      <div contenteditable="false">
        <button type="button" draggable="false" aria-label="Block options">
          <span></span>
        </button>
      </div>
      <mark contenteditable="false">b</mark>
    </div>
  </div>
  <div>
    <button type="button">insert at caret</button>
    <button type="button">edit meta</button>
    <button type="button">clear meta</button>
    <button type="button">remove mark</button>
    <button type="button">replace span</button>
    <button type="button">replace across</button>
    <button type="button">set value</button>
    <button type="button">clear value</button>
    <button type="button">insert between rows</button>
  </div>
  <output aria-label="value">@[a](x)@[b](y)</output>
</div>"
`;

exports[`Component: stories > Api stories > Story Default 1`] = `
"<div>
  <div contenteditable="true">
    <span>hello </span>
    <mark contenteditable="false">world</mark>
    <span> foo</span>
  </div>
  <div>
    <button type="button">insert at caret</button>
    <button type="button">edit meta</button>
    <button type="button">clear meta</button>
    <button type="button">remove mark</button>
    <button type="button">replace span</button>
    <button type="button">replace across</button>
    <button type="button">set value</button>
    <button type="button">clear value</button>
    <button type="button">insert between rows</button>
  </div>
  <output aria-label="value">hello @[world](u1) foo</output>
</div>"
`;

exports[`Component: stories > Material stories > Story Chipped 1`] = `
"<div contenteditable="true">
  <span>Hello beautiful the </span>
  <div contenteditable="false">
    <span>first</span>
  </div>
  <span> world from the </span>
  <div contenteditable="false">
    <span>second</span>
  </div>
  <span> </span>
</div>"
`;

exports[`Component: stories > Material stories > Story Mentions 1`] = `
"<div contenteditable="true">
  <span>Enter the '@' for calling mention list:&#10;- Hello @Agustina and </span>
  <div contenteditable="false">
    <div>R</div>
    <span>Ruslan</span>
  </div>
  <span>!</span>
</div>"
`;

exports[`Component: stories > Material stories > Story Overridden 1`] = `
"<div>
  <div contenteditable="true">
    <span>Hello beautiful the </span>
    <div contenteditable="false">
      <span>first</span>
    </div>
    <span> world from the </span>
    <div contenteditable="false">
      <span>second</span>
    </div>
    <span> </span>
  </div>
</div>"
`;

exports[`Component: stories > Rsuite stories > Story Overridden 1`] = `
"<div contenteditable="true">
  <span>Type the '@' to begin creating a </span>
  <div data-size="md" contenteditable="false">
    <span>tag</span>
  </div>
  <span>. Then press the </span>
  <div data-size="md" contenteditable="false">
    <span>Enter</span>
  </div>
  <span> to finish. For example: @hello</span>
</div>"
`;

exports[`Component: stories > Rsuite stories > Story TaggedInput 1`] = `
"<div contenteditable="true">
  <span>Type the '@' to begin creating a </span>
  <div data-size="md" contenteditable="false">
    <span>tag</span>
  </div>
  <span>. Then press the </span>
  <div data-size="md" contenteditable="false">
    <span>Enter</span>
  </div>
  <span> to finish. For example: @hello</span>
</div>"
`;
